--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,9 @@ name = "leaf"
 version = "0.1.0"
 edition = "2024"
 
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+
 [dependencies]
